--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import "header.css";
-@import "main.css";
 @import "footer.css";
+@import "main.css";
 
 /*
 * {
@@ -16,10 +16,6 @@ body {
     font-family: 'Arial';
     margin: 0;
     padding: 0;
-}
-
-a {
-
 }
 
 .button {
@@ -40,5 +36,27 @@ a {
 
 
 
+.button2 {
+    border-radius: 5px;
+    list-style-type: none;
+    text-decoration: none;
+    display: inline-block;
+    padding: 20px;
+    color: white;
+    background-color: #3d3aa6;
+    box-shadow: 4px 4px 5px rgba(0,0,0,0.7);
+}
 
+
+.button2:hover {
+    background-color: #423fd7;
+    color: white;
+    box-shadow: 4px 4px 10px rgba(0,0,0,0.7);
+}
+
+.button2.color {
+    padding: 0;
+    width: 55px;
+    height: 55px;
+}
 
