--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 body {
     background-color: #000000;
     color: #d3dede;
-    font-family: 'Arial';
+    font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
 }
