--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 main {
-    background-color: #0a0a0a;
+    /*background-color: #0a0a0a;*/
     margin: var(--header-size) auto auto;
     width: 80%;
     padding: 2%;
