--- a/css/colorpicker.css
+++ b/css/colorpicker.css
@@ -6,6 +6,11 @@
 
 
 .colorpicker-container {
+
+    position: absolute;
+    right: 20px;
+    bottom: 20px;
+
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
